// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconButton /> Default story renders snapshot 1`] = `
<button
  aria-label="info"
  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1bkmmp7-MuiButtonBase-root-MuiIconButton-root"
  data-testid="iconButton"
  tabindex="0"
  type="button"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
      data-jest-file-name="IconInfoCircleLarge.svg"
      data-jest-svg-name="IconInfoCircleLarge"
      data-testid="IconInfoCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`<IconButton /> LargeSecondaryIconButton story renders snapshot 1`] = `
<button
  aria-label="checked"
  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1hws01p-MuiButtonBase-root-MuiIconButton-root"
  data-testid="iconButton"
  tabindex="0"
  type="button"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`<IconButton /> LargeTertiaryIconButton story renders snapshot 1`] = `
<button
  aria-label="x mark"
  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-nbevv-MuiButtonBase-root-MuiIconButton-root"
  data-testid="iconButton"
  tabindex="0"
  type="button"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
      data-jest-file-name="IconXMarkLarge.svg"
      data-jest-svg-name="IconXMarkLarge"
      data-testid="IconXMarkLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`<IconButton /> LivePreview story renders snapshot 1`] = `
<div
  style="align-items: center; display: grid; grid-template-columns: repeat(11, min-content);"
>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1bkmmp7-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconGridLarge.svg"
          data-jest-svg-name="IconGridLarge"
          data-testid="IconGridLarge"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 32 32"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1bkmmp7-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconGridLarge.svg"
          data-jest-svg-name="IconGridLarge"
          data-testid="IconGridLarge"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 32 32"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1hws01p-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      style="margin-left: 24px; margin-right: 10px;"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconInfoSpeechBubbleLarge.svg"
          data-jest-svg-name="IconInfoSpeechBubbleLarge"
          data-testid="IconInfoSpeechBubbleLarge"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 32 32"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1hws01p-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      style="margin-right: 10px;"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconInfoSpeechBubbleLarge.svg"
          data-jest-svg-name="IconInfoSpeechBubbleLarge"
          data-testid="IconInfoSpeechBubbleLarge"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 32 32"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1hws01p-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      style="margin-left: 24px; margin-right: 10px;"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconXMarkLarge.svg"
          data-jest-svg-name="IconXMarkLarge"
          data-testid="IconXMarkLarge"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 32 32"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-nntl9a-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      style="margin-left: 24px; margin-right: 10px;"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconXMarkSmall.svg"
          data-jest-svg-name="IconXMarkSmall"
          data-testid="IconXMarkSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-168awpf-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      style="margin-left: 24px; margin-right: 8px;"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconBarChartVertical3Small.svg"
          data-jest-svg-name="IconBarChartVertical3Small"
          data-testid="IconBarChartVertical3Small"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-168awpf-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      style="margin-right: 8px;"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconBarChartVertical3Small.svg"
          data-jest-svg-name="IconBarChartVertical3Small"
          data-testid="IconBarChartVertical3Small"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-fq7kwb-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      style="margin-left: 24px; margin-right: 8px;"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconPlusCircleSmall.svg"
          data-jest-svg-name="IconPlusCircleSmall"
          data-testid="IconPlusCircleSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-fq7kwb-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      style="margin-right: 8px;"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconPlusCircleSmall.svg"
          data-jest-svg-name="IconPlusCircleSmall"
          data-testid="IconPlusCircleSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-fq7kwb-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      style="margin-left: 24px; margin-right: 8px;"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconXMarkSmall.svg"
          data-jest-svg-name="IconXMarkSmall"
          data-testid="IconXMarkSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`<IconButton /> MediumTertiaryIconButton story renders snapshot 1`] = `
<button
  aria-label="x mark"
  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-ncz7rx-MuiButtonBase-root-MuiIconButton-root"
  data-testid="iconButton"
  tabindex="0"
  type="button"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
      data-jest-file-name="IconXMarkLarge.svg"
      data-jest-svg-name="IconXMarkLarge"
      data-testid="IconXMarkLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`<IconButton /> SmallPrimaryIconButton story renders snapshot 1`] = `
<button
  aria-label="info"
  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-168awpf-MuiButtonBase-root-MuiIconButton-root"
  data-testid="iconButton"
  tabindex="0"
  type="button"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
      data-jest-file-name="IconInfoCircleSmall.svg"
      data-jest-svg-name="IconInfoCircleSmall"
      data-testid="IconInfoCircleSmall"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 14 14"
    />
  </div>
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`<IconButton /> SmallSecondaryIconButton story renders snapshot 1`] = `
<button
  aria-label="checked"
  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-fq7kwb-MuiButtonBase-root-MuiIconButton-root"
  data-testid="iconButton"
  tabindex="0"
  type="button"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
      data-jest-file-name="IconCheckCircleSmall.svg"
      data-jest-svg-name="IconCheckCircleSmall"
      data-testid="IconCheckCircleSmall"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 14 14"
    />
  </div>
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`<IconButton /> SmallTertiaryIconButton story renders snapshot 1`] = `
<button
  aria-label="x mark"
  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1h1gmjx-MuiButtonBase-root-MuiIconButton-root"
  data-testid="iconButton"
  tabindex="0"
  type="button"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
      data-jest-file-name="IconXMarkSmall.svg"
      data-jest-svg-name="IconXMarkSmall"
      data-testid="IconXMarkSmall"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 14 14"
    />
  </div>
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`<IconButton /> Test story renders snapshot 1`] = `
<button
  aria-label="info"
  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1hws01p-MuiButtonBase-root-MuiIconButton-root"
  data-testid="iconButton"
  tabindex="0"
  type="button"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
      data-jest-file-name="IconSearchLarge.svg"
      data-jest-svg-name="IconSearchLarge"
      data-testid="IconSearchLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;
